styles/style.css
/* ... */
@media only screen and (min-width: 1100px) {
  .menu {
    height: 5rem;
    padding: 4.5vh 6vh;
  }
}

.menu--intro {
  position: absolute;
  top: 0;
  opacity: 1;
}

.nav {
  display: none;
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
}

.nav__logo {
  width: 90px;
}

@media only screen and (min-width: 1100px) {
  .nav__logo {
    width: 110px;
  }
}

.nav--open {
  position: fixed;
  width: 100%;
  height: 100%;
  padding: 8rem 3.4vh 0;
  display: block;
  z-index: 50;
  background-color: rgba(20, 20, 20, 0.98);
}

@media only screen and (min-width: 1100px) {
  .nav--open {
    padding: 20rem 6vh 0;
  }
}

.nav--opacity {
  opacity: 1;
}

@media only screen and (min-width: 1100px) {
  .nav-content {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    margin: 0 auto;
    width: 80%;
  }
}

.nav-toggle {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.nav-toggle:hover {
  color: #E52025;
  cursor: pointer;
}

.nav-toggle:hover .nav-toggle__icon span {
  background: #E52025;
}

.nav-toggle--open span:nth-child(1),
.nav-toggle--open span:nth-child(4) {
  top: 18px;
  width: 0%;
  left: 50%;
}

.nav-toggle--open span:nth-child(2) {
  -webkit-transform: rotate(45deg);
          transform: rotate(45deg);
}

.nav-toggle--open span:nth-child(3) {
  -webkit-transform: rotate(-45deg);
          transform: rotate(-45deg);
}

.nav-toggle__icon {
  width: 30px;
  height: 30px;
  top: 5px;
  position: relative;
  margin-left: 1rem;
  -webkit-transition: .25s ease-in-out;
  transition: .25s ease-in-out;
}

.nav-toggle__icon:hover {
  cursor: pointer;
}

@media only screen and (min-width: 1100px) {
  .nav-toggle__icon {
    width: 40px;
  }
}

.nav-toggle__icon span {
  display: block;
  position: absolute;
  left: 0;
  height: 1px;
  width: 100%;
  background: #ffffff;
  opacity: 1;
  -webkit-transition: .25s ease-in-out;
  transition: .25s ease-in-out;
}

@media only screen and (min-width: 1100px) {
  .nav-toggle__icon span {
    height: 2px;
  }
}

.nav-toggle__icon span:nth-child(1) {
  top: 0px;
}

.nav-toggle__icon span:nth-child(2),
.nav-toggle__icon span:nth-child(3) {
  top: 8px;
}

@media only screen and (min-width: 1100px) {
  .nav-toggle__icon span:nth-child(2),
  .nav-toggle__icon span:nth-child(3) {
    top: 10px;
  }
}

.nav-toggle__icon span:nth-child(4) {
  top: 16px;
}

@media only screen and (min-width: 1100px) {
  .nav-toggle__icon span:nth-child(4) {
    top: 20px;
  }
}

.footer {
  width: 100%;
  margin: 3.4vh auto;
  padding: 0 3.4vh;
}

.footer .footer__social {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.text-center {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin: 3.4vh;
}

@media only screen and (min-width: 1100px) {
  .text-center {
    width: 52.5%;
    min-height: 70vh;
    margin: 0 auto;
  }
}

.text-column__container {
  width: 100vw;
}

.text-column {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin: 3.4vh;
}

@media only screen and (min-width: 1100px) {
  .text-column {
    min-height: 85vh;
    margin: 0 auto;
  }
}

@media only screen and (min-width: 1100px) {
  .text-column__container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    margin: 0 12vh;
  }
}

@media only screen and (min-width: 1100px) {
  .text-column__item {
    width: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
}

.text-column__item + .text-column__item {
  margin-top: 6.8vh;
}

@media only screen and (min-width: 1100px) {
  .text-column__item + .text-column__item {
    margin-top: 0;
    padding-left: 20%;
  }
}

.text-row {
  margin: 3.4vh;
}

@media only screen and (min-width: 1100px) {
  .text-row {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    min-height: 45vh;
    margin: 12vh 6vh;
  }
}

.text-row__paragraph {
  margin-top: 1.7vh;
}

@media only screen and (min-width: 1100px) {
  .text-row__paragraph {
    margin-top: 0;
  }
}

.u-list {
  width: 100%;
}

.u-list__item {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.u-list__slash {
  margin-right: 11px;
}

.u-list--contact-page {
  margin-top: 1.13333vh;
}
/* ... */

